# goblins

./: .gitignore  CMakeLists.txt  README.md  config.hpp  main.cpp  run_pool.hpp  worker_thread_service.hpp
src/: goblin_error.hpp  goblin_impl.hpp  goblin_name_generator.hpp  goblin_state.hpp  main.cpp  run_pool.hpp  sugar.cmake  use_unique_future.hpp  worker_thread_service.hpp
src/goblin_state/: goblin_state_killing_folk.cpp  sugar.cmake
